src/test/deca/context/invalid/14_AssignNull.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: left-hand side of assignment is not an lvalue
// 
// Historique:
//    cree le 01/01/2022

{
	// Doit etre refuse.
   	null = true;
}
